--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,6 @@
 #
 default: &default
   adapter: postgresql
-  username: postgres
-  password: '1234'
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
@@ -27,7 +25,8 @@ development:
   <<: *default
   database: bike_shop_backend_development
   username: postgres
-  password: '1234'
+  password: bikeshop
+  host: localhost
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
