--- a/config/database.yml
+++ b/config/database.yml
@@ -24,8 +24,8 @@ default: &default
 development:
   <<: *default
   database: bike_shop_backend_development
-  username: postgres
-  password: bikeshop
+  username: 'HP'
+  password: '1234'
   host: localhost
 
   # The specified database role being used to connect to postgres.
