--- a/config/database.yml
+++ b/config/database.yml
@@ -24,6 +24,9 @@ default: &default
 development:
   <<: *default
   database: bike_shop_backend_development
+  username: postgres
+  password: '1234'
+  host: localhost
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -58,6 +61,8 @@ development:
 test:
   <<: *default
   database: bike_shop_backend_test
+  username: postgres
+  password: '1234'
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -82,4 +87,5 @@ test:
 production:
   <<: *default
   database: bike_shop_backend_production
+  username: postgres
   password: <%= ENV["BIKE_SHOP_BACKEND_DATABASE_PASSWORD"] %>
